--- a/source/webapp/templates/partial/base_menu.html
+++ b/source/webapp/templates/partial/base_menu.html
@@ -1,4 +1,4 @@
-<a class="nav-link active" aria-current="page" href="#">Home</a>
+<a class="nav-link" href="{% url 'webapp:product_create' %}">New Product</a>
 <a class="nav-link" href="#">Features</a>
 <a class="nav-link" href="#">Pricing</a>
 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
