--- a/source/webapp/templates/products/index.html
+++ b/source/webapp/templates/products/index.html
@@ -5,4 +5,16 @@
     <div>
         {% include 'partial/search.html' %}
     </div>
+    {% for product in products %}
+        <div class="card my-1">
+            <div class="card-body">
+                <h5 class="card-title">{{ product.title }}</h5>
+                <p class="card-text">{{ product.description }}</p>
+                <p class="card-text">{{ product.category }}</p>
+                <a href="{% url 'webapp:product_view' pk=product.pk %}" class="card-link">Product link</a>
+            </div>
+        </div>
+    {% empty %}
+        <p>No products</p>
+    {% endfor %}
 {% endblock %}
