--- a/source/webapp/templates/partial/personal_menu.html
+++ b/source/webapp/templates/partial/personal_menu.html
@@ -1,2 +1,3 @@
 <a class="nav-link" href="{% url 'webapp:product_update_view' pk=product.pk %}">Update product</a>
 <a class="nav-link" href="{% url 'webapp:product_delete_view' pk=product.pk %}">Delete product</a>
+<a class="nav-link" href="{% url 'webapp:review_create' pk=product.pk %}">New Review</a>
