--- a/source/webapp/templates/products/product_details.html
+++ b/source/webapp/templates/products/product_details.html
@@ -8,7 +8,7 @@
 {% block content %}
     <h1>Article</h1>
     <div class="card">
-        <img src="{% if product.img %}{{ product.img.url }}{% else %}{% static 'images/tovar.png' %}{% endif %}" class="card-img-top" alt="{{ product.title }}">
+        <img src="{% if product.img %}{{ product.img.url }}{% else %}{% static 'images/tovar.png' %}{% endif %}" class="card-img-top w-50 mx-auto" alt="{{ product.title }}">
         <div class="card-body">
             <h5 class="card-title">{{ product.title }}</h5>
             <p class="card-text">{{ product.description }}</p>
