--- a/source/webapp/templates/products/index.html
+++ b/source/webapp/templates/products/index.html
@@ -5,6 +5,9 @@
     <div>
         {% include 'partial/search.html' %}
     </div>
+    <div>
+        {% include 'partial/pagination.html' %}
+    </div>
     {% for product in products %}
         <div class="card my-1">
             <div class="card-body">
