--- a/source/webapp/templates/products/product_details.html
+++ b/source/webapp/templates/products/product_details.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
     <h1>Article</h1>
-    <div class="card">
+    <div class="card mb-2">
         <img src="{% if product.img %}{{ product.img.url }}{% else %}{% static 'images/tovar.png' %}{% endif %}" class="card-img-top w-50 mx-auto" alt="{{ product.title }}">
         <div class="card-body">
             <h5 class="card-title">{{ product.title }}</h5>
@@ -15,4 +15,23 @@
             <p class="card-text">{{ product.category }}</p>
         </div>
     </div>
+    <ul class="list-group">
+        {% for review in reviews %}
+            <li class="list-group-item mb-1">
+                <h5 class="card-title">Author: {{ review.author }}, {{ review.author.email }}</h5>
+                <p class="card-text">{{ review.grade }}</p>
+                <p class="card-text">{{ review.text }}</p>
+                <p>
+                    <a href="#" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
+                        Edit review
+                    </a>
+                </p>
+                <p>
+                    <a href="#" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
+                        Delete review
+                    </a>
+                </p>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
