--- a/source/webapp/templates/products/product_details.html
+++ b/source/webapp/templates/products/product_details.html
@@ -22,7 +22,7 @@
                 <p class="card-text">{{ review.grade }}</p>
                 <p class="card-text">{{ review.text }}</p>
                 <p>
-                    <a href="#" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
+                    <a href="{% url 'webapp:review_update' pk=review.pk %}" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
                         Edit review
                     </a>
                 </p>
