added reviews delete view

--- a/source/webapp/templates/products/product_details.html
+++ b/source/webapp/templates/products/product_details.html
@@ -27,7 +27,7 @@
                     </a>
                 </p>
                 <p>
-                    <a href="#" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
+                    <a href="{% url 'webapp:review_delete' pk=review.pk %}" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
                         Delete review
                     </a>
                 </p>
