--- a/source/webapp/templates/products/product_details.html
+++ b/source/webapp/templates/products/product_details.html
@@ -13,6 +13,7 @@
             <h5 class="card-title">{{ product.title }}</h5>
             <p class="card-text">{{ product.description }}</p>
             <p class="card-text">{{ product.category }}</p>
+            <p class="card-text">Avg. grade: {{ product.avg_grade }}</p>
         </div>
     </div>
     <ul class="list-group">
