--- a/source/webapp/templates/products/product_details.html
+++ b/source/webapp/templates/products/product_details.html
@@ -13,14 +13,25 @@
             <h5 class="card-title">{{ product.title }}</h5>
             <p class="card-text">{{ product.description }}</p>
             <p class="card-text">{{ product.category }}</p>
-            <p class="card-text">Avg. grade: {{ product.avg_grade }}</p>
+            <div class="rating-result">
+                {% for star in stars %}
+                    <span {% if product.avg_grade >= forloop.counter %}class="active"{% endif %}></span>
+                {% endfor %}
+            </div>
+            <p class="card-text">Avg. grade: {{ product.avg_grade }}
+            </p>
         </div>
     </div>
     <ul class="list-group">
         {% for review in reviews %}
             <li class="list-group-item mb-1">
                 <h5 class="card-title">Author: {{ review.author }}, {{ review.author.email }}</h5>
-                <p class="card-text">{{ review.grade }}</p>
+                <div class="rating-result">
+                    {% for star in stars %}
+                        <span {% if review.grade >= forloop.counter %}class="active"{% endif %}></span>
+                    {% endfor %}
+                </div>
+                <p class="card-text">Grade: {{ review.grade }}</p>
                 <p class="card-text">{{ review.text }}</p>
                 <p>
                     <a href="{% url 'webapp:review_update' pk=review.pk %}" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
