--- a/source/webapp/templates/partial/base_menu.html
+++ b/source/webapp/templates/partial/base_menu.html
@@ -1,1 +1,9 @@
+{% if not request.user.is_authenticated %}
+    <a class="nav-link" href="{% url 'accounts:login' %}" >Log in</a>
+{% else %}
+    <form id="logout-form" method="post" action="{% url 'accounts:logout' %}?next={{ request.path }}">
+        {% csrf_token %}
+        <button class="nav-link" type="submit">Log out({{ user }})</button>
+    </form>
+{% endif %}
 <a class="nav-link" href="{% url 'webapp:product_create' %}">New Product</a>
