--- a/source/webapp/templates/partial/base_menu.html
+++ b/source/webapp/templates/partial/base_menu.html
@@ -1,5 +1,6 @@
 {% if not request.user.is_authenticated %}
     <a class="nav-link" href="{% url 'accounts:login' %}" >Log in</a>
+    <a class="nav-link" href="{% url 'accounts:registration' %}" >Registration</a>
 {% else %}
     <form id="logout-form" method="post" action="{% url 'accounts:logout' %}?next={{ request.path }}">
         {% csrf_token %}
