--- a/source/webapp/templates/partial/base_menu.html
+++ b/source/webapp/templates/partial/base_menu.html
@@ -2,6 +2,7 @@
     <a class="nav-link" href="{% url 'accounts:login' %}" >Log in</a>
     <a class="nav-link" href="{% url 'accounts:registration' %}" >Registration</a>
 {% else %}
+    <a class="nav-link" href="{% url 'accounts:user_details' pk=request.user.pk %}" >User {{user}} profile</a>
     <form id="logout-form" method="post" action="{% url 'accounts:logout' %}?next={{ request.path }}">
         {% csrf_token %}
         <button class="nav-link" type="submit">Log out({{ user }})</button>
