--- a/source/webapp/templates/partial/base_menu.html
+++ b/source/webapp/templates/partial/base_menu.html
@@ -8,4 +8,6 @@
         <button class="nav-link" type="submit">Log out({{ user }})</button>
     </form>
 {% endif %}
-<a class="nav-link" href="{% url 'webapp:product_create' %}">New Product</a>
+{% if perms.webapp.add_product %}
+    <a class="nav-link" href="{% url 'webapp:product_create' %}">New Product</a>
+{% endif %}
