added permissions for authorization

--- a/source/accounts/templates/registration.html
+++ b/source/accounts/templates/registration.html
@@ -3,5 +3,9 @@
 {% block title %}Registration{% endblock %}
 {% block content %}
 <h1>Registration</h1>
-{% include 'partial/form.html' with value_submit='Registration' form_method='post' %}
+{% if not request.user.is_authenticated %}
+    {% include 'partial/form.html' with value_submit='Registration' form_method='post' %}
+{% else %}
+    <p>You entered as {{user}}</p>
+{% endif %}
 {% endblock %}
