--- a/source/accounts/templates/user_detail.html
+++ b/source/accounts/templates/user_detail.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block title %}User: {{ user_obj.get_full_name }}{% endblock %}
 {% block content %}
+{% if not request.user.is_authenticated %}
+    <p>Please log in previously</p>
+{% else %}
     <h1>User</h1>
     <div class="card mb-3">
         <div class="card-body">
@@ -13,4 +16,5 @@
         </div>
     </div>
     {% include 'partial/reviews_list.html' %}
+{% endif %}
 {% endblock %}
