--- a/source/accounts/templates/login.html
+++ b/source/accounts/templates/login.html
@@ -3,16 +3,20 @@
 {% block title %}Log in{% endblock %}
 {% block content %}
     <h1>Log in</h1>
-    <form action="{% url 'accounts:login' %}" method="post" class="text-center">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="username" class="form-label">Login:</label>
-            <input type="text" name="username" id="username">
-        </div>
-        <div class="form-group">
-            <label for="password" class="form-label">Password:</label>
-            <input type="password" name="password" id="password">
-        </div>
-        <button type="submit">Log in</button>
-    </form>
+    {% if not request.user.is_authenticated %}
+        <form action="{% url 'accounts:login' %}" method="post" class="text-center">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="username" class="form-label">Login:</label>
+                <input type="text" name="username" id="username">
+            </div>
+            <div class="form-group">
+                <label for="password" class="form-label">Password:</label>
+                <input type="password" name="password" id="password">
+            </div>
+            <button type="submit">Log in</button>
+        </form>
+    {% else %}
+        <p>You entered as {{user}}</p>
+    {% endif %}
 {% endblock %}
