--- a/source/webapp/templates/partial/reviews_list.html
+++ b/source/webapp/templates/partial/reviews_list.html
@@ -26,10 +26,17 @@
                     </a>
                 </p>
             {% endif %}
-            {% if link_to_product  %}
+            {% if link_to_product %}
                 <p>
                     <a href="{% url 'webapp:product_view' pk=review.product.pk %}" class="link-warning link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
                         Go to product
+                    </a>
+                </p>
+            {% endif %}
+            {% if accept_link %}
+                <p>
+                    <a href="{% url 'webapp:accept_review' pk=review.pk %}" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">
+                        Accept review
                     </a>
                 </p>
             {% endif %}
