--- a/source/webapp/templates/reviews/no_moderate_list.html
+++ b/source/webapp/templates/reviews/no_moderate_list.html
@@ -3,5 +3,5 @@
 {% block title %}No moderate reviews list{% endblock %}
 {% block content %}
     <h1>No moderate reviews list</h1>
-    {% include 'partial/reviews_list.html' with link_to_product=True accept_link=True %}
+    {% include 'partial/reviews_list.html' with link_to_product=True accept_link=True decline_link=True %}
 {% endblock %}
